--- a/new_pages/errors.qmd
+++ b/new_pages/errors.qmd
@@ -118,9 +118,7 @@ You may have supplied too few values for the color scale, make sure you have the
 ```
 Can't add x object
 ```
-
-This is likely a ggplot error from the use of `scale_fill_manual()`, where you have not provided enough colors for the number of unique values. If the column is class factor, consider whether `NA` is a factor level.
-
+You probably have an extra `+` at the end of a ggplot command that you need to delete.
 
 ### R Markdown errors {.unnumbered}  
 
