--- a/new_pages/survey_analysis.qmd
+++ b/new_pages/survey_analysis.qmd
@@ -1107,3 +1107,5 @@ survey_design %>%
 [EPIET survey case studies](https://github.com/EPIET/RapidAssessmentSurveys)
 
 [Analyzing Complex Survey Data](https://www.bookdown.org/rwnahhas/RMPH/survey.html)
+
+[Exploring Complex Survey Data Analysis Using R: A Tidy Introduction with srvyr and survey](https://tidy-survey-r.github.io/tidy-survey-book/c01-intro.html)
