Updates following comments

--- a/new_pages/data_table.qmd
+++ b/new_pages/data_table.qmd
@@ -46,7 +46,7 @@ This page will explore some of the core functions of **data.table** using the ca
 We import the dataset of cases from a simulated Ebola epidemic. If you want to download the data to follow step-by-step, see instructions in the [Download book and data](data_used.qmd) page. The dataset is imported using the `import()` function from the **rio** package. See the page on [Import and export](importing.qmd) for various ways to import data. From here we use `data.table()` to convert the data frame to a data table.
 
 ```{r, warning=F, message=F}
-linelist <- rio::import(here("data", "linelist_cleaned.xlsx")) %>% 
+linelist <- import(here("data", "case_linelists", "linelist_cleaned.rds")) %>% 
      data.table()
 ```
 
