--- a/new_pages/phylogenetic_trees.qmd
+++ b/new_pages/phylogenetic_trees.qmd
@@ -1,7 +1,6 @@
 
 # Phylogenetic trees {}  
 
-
 <!-- ======================================================= -->
 
 ## Overview {}
@@ -13,29 +12,8 @@ They can be constructed from genetic sequences using distance-based methods (suc
 
 In this page we will learn how to use the **ggtree** package, which allows for combined visualization of phylogenetic trees with additional sample data in form of a dataframe. This will enable us to observe patterns and improve understanding of the outbreak dynamic.
 
-```{r, phylogenetic_trees_overview_graph, out.width=c('80%'), fig.align='center', fig.show='hold', echo = FALSE}
-
-pacman::p_load(here, ggplot2, dplyr, ape, ggtree, treeio, ggnewscale, tidytree)
-
-tree <- ape::read.tree(here::here("data", "phylo", "Shigella_tree.txt"))
-
-sample_data <- read.csv(here::here("data","phylo", "sample_data_Shigella_tree.csv"),sep=",", na.strings=c("NA"), head = TRUE, stringsAsFactors=F)
-
-
-ggtree(tree, layout="circular", branch.length='none') %<+% sample_data + # the %<+% is used to add your dataframe with sample data to the tree
-  aes(color=Belgium) + # color the branches according to a variable in your dataframe
-  scale_color_manual(name = "Sample Origin", # name of your color scheme (will show up in the legend like this)
-                    breaks = c("Yes", "No"), # the different options in your variable
-                   labels = c("NRCSS Belgium", "Other"), # how you want the different options named in your legend, allows for formatting
-                 values= c("blue", "black"), # the color you want to assign to the variable 
-                 na.value = "black") + # color NA values in black as well
-  new_scale_color() + # allows to add an additional color scheme for another variable
-     geom_tippoint(aes(color=Continent), size=1.5) + # color the tip point by continent, you may change shape adding "shape = "
-scale_color_brewer(name = "Continent",  # name of your color scheme (will show up in the legend like this)
-                       palette="Set1", # we choose a set of colors coming with the brewer package
-                   na.value="grey") + # for the NA values we choose the color grey
-  theme(legend.position= "bottom")
-
+```{r out.width = "80%", fig.align = "center", echo=F}
+knitr::include_graphics(here::here("images", "phylogenetic_tree.jpg"))
 ```
 
 <!-- ======================================================= -->
@@ -75,7 +53,8 @@ pacman::p_load(
   ggtree,          # to visualize phylogenetic files
   treeio,          # to visualize phylogenetic files
   tidytree,        # to visualize phylogenetic files
-  ggnewscale)      # to add additional layers of color schemes
+  ggnewscale       # to add additional layers of color schemes
+  )      
 
 ```
 
