fix html not showing up

--- a/new_pages/collaboration.qmd
+++ b/new_pages/collaboration.qmd
@@ -1083,15 +1083,15 @@ how to find it and some bash commands you will need.
 Below we present a few common git commands. When you use them, keep in mind
 which branch is active (checked-out), as that will change the action!
 
-In the commands below, <name> represents a branch name. 
-<commit_hash> represents the hash ID of a specific
-commit. <num> represents a number. Do not type the
+In the commands below, \<name\> represents a branch name. 
+\<commit_hash\> represents the hash ID of a specific
+commit. \<num\> represents a number. Do not type the
 \< or \> symbols.
 
 | Git command              | Action                                                                   |
 |--------------------------|--------------------------------------------------------------------------|
-| `git branch <name>`      | Create a new branch with the name <name>                                 |
-| `git checkout <name>`    | Switch current branch to <name>                                          |
+| `git branch <name>`      | Create a new branch with the name \<name\>                                 |
+| `git checkout <name>`    | Switch current branch to \<name\>                                          |
 | `git checkout -b <name>` | Shortcut to create new branch *and* switch to it                         |
 | `git status`             | See untracked changes                                                    |
 | `git add <file>`         | Stage a file                                                             |
@@ -1100,7 +1100,7 @@ commit. <num> represents a number. Do not type the
 | `git pull`               | Pull commits from remote repository in current branch                    |
 | `git push`               | Push local commits to remote directory                          |
 | `git switch`             | An alternative to `git checkout` that is being phased in to Git |
-| `git merge <name>`       | Merge <name> branch into current branch                         |
+| `git merge <name>`       | Merge \<name\> branch into current branch                         |
 | `git rebase <name>`      | Append commits from current branch on to <name> branch          |
 
 
